RESOLVED FIXED52802
SVG Pattern doesn't take preserveAspectRatio of references Pattern
https://bugs.webkit.org/show_bug.cgi?id=52802
Summary SVG Pattern doesn't take preserveAspectRatio of references Pattern
Dirk Schulze
Reported 2011-01-20 05:09:29 PST
SVG Pattern does not take the preserveAspectRatio of a references Pattern (references by xlink:href). Need to add a test later. Just opening the bug for now.
Attachments
Testcase: Should see a perfect smiley (840 bytes, image/svg+xml)
2011-01-20 10:26 PST, Dirk Schulze
no flags
Patch (27.29 KB, patch)
2011-01-20 12:41 PST, Dirk Schulze
rwlbuis: review+
Dirk Schulze
Comment 1 2011-01-20 10:26:41 PST
Created attachment 79613 [details] Testcase: Should see a perfect smiley You should see a perfect smiley, if the pattern uses the preserveAspectRatio of the referenced pattern.
Dirk Schulze
Comment 2 2011-01-20 12:41:52 PST
Rob Buis
Comment 3 2011-01-20 13:13:54 PST
Comment on attachment 79637 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=79637&action=review Code and test look great, just tiny nitpicks, so r+ from me. > Source/WebCore/ChangeLog:11 > + Tiny nitpick, the wording could be better, could you rephrase a bit, "Modified PatternAttributes" is terse, and I don't think you should put a comma after it for instance. > LayoutTests/ChangeLog:9 > + Better: Added a test case to check that we take preserveAspectRatio of a referenced SVGPattern into account. > LayoutTests/svg/custom/pattern-referencing-preserve-aspect-ratio.svg:4 > + x="-20" y="0" width="100" height="80" viewBox="0 0 20 40"> One space character too much in there :) > LayoutTests/svg/custom/pattern-referencing-preserve-aspect-ratio.svg:17 > +</svg> Indentation is not completely consistent.
Dirk Schulze
Comment 4 2011-01-20 13:27:23 PST
Note You need to log in before you can comment on or make changes to this bug.