2011-01-20  Dirk Schulze  <krit@webkit.org>

Reviewed by Rob Buis.

        SVG Pattern doesn't take preserveAspectRatio of references Pattern
        https://bugs.webkit.org/show_bug.cgi?id=52802

        SVGPattern didn't take preserveAspectRatio of a referenced SVGPattern into account. Store preserveAspectRatio
        in PatternAttributes as well, if the attribute was set on the referenced SVGPattern element.

        Test: svg/custom/pattern-referencing-preserve-aspect-ratio.svg

        * rendering/svg/RenderSVGResourcePattern.cpp:
        (WebCore::RenderSVGResourcePattern::buildTileImageTransform):
        * svg/PatternAttributes.h:
        (WebCore::PatternAttributes::PatternAttributes):
        (WebCore::PatternAttributes::preserveAspectRatio):
        (WebCore::PatternAttributes::setPreserveAspectRatio):
        (WebCore::PatternAttributes::hasPreserveAspectRatio):
        * svg/SVGPatternElement.cpp:
        (WebCore::SVGPatternElement::collectPatternAttributes):
2011-01-20  Dirk Schulze  <krit@webkit.org>

        Reviewed by Rob Buis.

        SVG Pattern doesn't take preserveAspectRatio of references Pattern
        https://bugs.webkit.org/show_bug.cgi?id=52802

        Added a test case to check that we take preserveAspectRatio of a referenced SVGPattern into account.

        * platform/mac/svg/custom/pattern-referencing-preserve-aspect-ratio-expected.checksum: Added.
        * platform/mac/svg/custom/pattern-referencing-preserve-aspect-ratio-expected.png: Added.
        * platform/mac/svg/custom/pattern-referencing-preserve-aspect-ratio-expected.txt: Added.
        * svg/custom/pattern-referencing-preserve-aspect-ratio.svg: Added.


Canonical link: https://commits.webkit.org/66512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76274 268f45cc-cd09-0410-ab3c-d52691b4dbfc